# brownian-bridge-term-structure

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  backtest.py  backtest_yahoo.py  fetch_data.py  main.py  pyproject.toml  requirements.txt
data/: ITL.mat  ITL_DEM_data.xlsx
docs/: DATA_DICTIONARY.md  METHODOLOGY.md  REPLICATION_NOTES.md
matlab_original/: figures.m  ll_k.m  ll_k_test.m  ll_kse.m  maximization.m
output/: backtest_results.txt
src/: __init__.py  config.py  data_loader.py  estimation.py  model.py  visualization.py
tests/: test_model.py
